# ProtoGen

./: .gitignore  CMakeLists.txt  LICENSE.txt  ProtoGen.dox  ProtoGen.pro  ProtoGen.qrc  README.md  defaultcss.txt  demolinktitlepage.txt  dependson.xml  dependson_cpp.xml  eficomms_protogenTest.xml  encodable.cpp  encodable.h  encodedlength.cpp  encodedlength.h  enumcreator.cpp  enumcreator.h  exampleprotocol.xml  exampleprotocol_cpp.xml  fieldcoding.cpp  fieldcoding.h  main.cpp  moredocsfile.txt  novatelprotocol.xml  protocolbitfield.cpp  protocolbitfield.h  protocolcode.cpp  protocolcode.h  protocoldocumentation.cpp  protocoldocumentation.h  protocolfield.cpp  protocolfield.h  protocolfile.cpp  protocolfile.h  protocolfloatspecial.cpp  protocolfloatspecial.h  protocolpacket.cpp  protocolpacket.h  protocolparser.cpp  (+13 more)
Novatel/: Novatel.pro  NovatelPacket.c  NovatelPacket.h  NovatelProtocol.c  NovatelShim.c  NovatelShim.h  main.cpp  novatelprotocol.xml
ProtoGenInstall/: keepme.txt
ProtoGenTest/: ProtoGenTest.pro  indices.h  main.cpp  packetinterface.c  packetinterface.h  translation.h
ProtoGenTestCPP/: ProtoGenTestCPP.pro  main.cpp  packetinterface.cpp  packetinterface.h  translation.h
cmake/: ProtoGenConfig.cmake.in  protogen_generate.cmake
prebuiltSources/: Doxyfile  bitfieldspecial.c  bitfieldspecial.h  bitfieldtest.xml  floatspecial.c  floatspecial.h  markdown.css
test/: CMakeLists.txt
tinyxml/: tinyxml2.cpp  tinyxml2.h
